# learning-c

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  memory_allocation.c  string_reverse.c
src/arrays/: arrays  arrays.c  arrays.h
src/helloworld/: helloworld.c  helloworld.h
src/memoryallocation/: memory_allocation.c  memory_allocation.h  memoryallocation.c
src/string/: string.c  string.h
